# alexa-smart-screen-sdk

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Config  NOTICE.txt  README.md  SECURITY.md  happy-npm-build  issue_template.md
modules/Alexa/: CMakeLists.txt
modules/Alexa/APLClientLibrary/: .gitignore  BuildOptions.cmake  CHANGELOG.md  CMakeLists.txt  Config  README.md  apl-release.json
modules/Alexa/APLClientLibrary/APLClient/: CMakeLists.txt
modules/Alexa/APLClientLibrary/APLClient/src/: AplClientBinding.cpp  AplClientRenderer.cpp  AplConfiguration.cpp  AplCoreConnectionManager.cpp  AplCoreEngineLogBridge.cpp  AplCoreGuiRenderer.cpp  AplCoreLocaleMethods.cpp  AplCoreMetrics.cpp  AplCoreTextMeasurement.cpp  CMakeLists.txt
modules/Alexa/APLClientLibrary/APLClient/test/: AplCoreConnectionManagerTest.cpp  AplCoreGuiRendererTest.cpp  CMakeLists.txt  MockAplCoreConnectionManager.h  MockAplOptionsInterface.h
modules/Alexa/APLClientLibrary/APLClientSandbox/: CMakeLists.txt  README.md
modules/Alexa/APLClientLibrary/APLClientSandbox/GUI/: index.html  package.json  script.js  server.js
modules/Alexa/APLClientLibrary/APLClientSandbox/src/: AplClientBridge.cpp  CMakeLists.txt  Executor.cpp  GUIManager.cpp  Logger.cpp  WebSocketSDKLogger.cpp  WebSocketServer.cpp  main.cpp
modules/Alexa/APLClientLibrary/apl-client-js/: APLClient.d.ts  APLComponent.d.ts  APLConfigurationChange.d.ts  APLRect.d.ts  APLWSRenderer.d.ts  Transforms.d.ts  WebSocketClient.d.ts  apl-client-5e58b3-attribution.txt  apl-client-attribution.txt  apl-client-packages.json  index.d.ts  index.js  package.json
modules/Alexa/APLClientLibrary/apl-client-js/avg/: APLGraphic.d.ts  APLGraphicElement.d.ts  APLGraphicPattern.d.ts  GraphicProperties.d.ts
modules/Alexa/APLClientLibrary/tools/: Testing.cmake
modules/Alexa/ApplicationUtilities/: CMakeLists.txt
modules/Alexa/ApplicationUtilities/APLClient/: CMakeLists.txt
modules/Alexa/ApplicationUtilities/APLClient/src/: AplClientBinding.cpp  AplCoreConnectionManager.cpp  AplCoreEngineLogBridge.cpp  AplCoreGuiRenderer.cpp  AplCoreMetrics.cpp  AplCoreTextMeasurement.cpp  CMakeLists.txt
modules/Alexa/ApplicationUtilities/Communication/: CMakeLists.txt
modules/Alexa/ApplicationUtilities/Communication/src/: CMakeLists.txt  WebSocketSDKLogger.cpp  WebSocketServer.cpp
modules/Alexa/ApplicationUtilities/SmartScreenClient/: CMakeLists.txt
modules/Alexa/ApplicationUtilities/SmartScreenClient/src/: CMakeLists.txt  ConnectionRetryTrigger.cpp  DefaultClientComponent.cpp  DeviceSettingsManagerBuilder.cpp  EqualizerRuntimeSetup.cpp  SmartScreenClient.cpp  StubApplicationAudioPipelineFactory.cpp
modules/Alexa/SSSDKCommon/: CMakeLists.txt
modules/Alexa/SSSDKCommon/include/SSSDKCommon/: AudioFileUtil.h  ConfigValidator.h  NullEqualizer.h  NullMediaPlayer.h  NullMediaSpeaker.h  NullMicrophone.h  TestMediaPlayer.h
modules/Alexa/SSSDKCommon/src/: AudioFileUtil.cpp  CMakeLists.txt  ConfigValidator.cpp  NullEqualizer.cpp  NullMediaSpeaker.cpp  NullMicrophone.cpp  TestMediaPlayer.cpp
modules/Alexa/SampleApp/: CMakeLists.txt
modules/Alexa/SampleApp/include/SampleApp/: AplClientBridge.h  AplCoreConnectionManager.h  AplCoreEngineSDKLogBridge.h  AplCoreGuiContentDownloadManager.h  AplCoreGuiRenderer.h  AplCoreMetrics.h  AplCoreTextMeasurement.h  CachingDownloadManager.h  ConnectionObserver.h  ConsolePrinter.h  DoNotDisturbSettingObserver.h  DownloadMonitor.h  ExternalCapabilitiesBuilder.h  FocusBridge.h  GUILogBridge.h  JsonUIManager.h  KeywordObserver.h  LocaleAssetsManager.h  PlatformSpecificValues.h  PortAudioMicrophoneWrapper.h  RevokeAuthorizationObserver.h  SampleApplication.h  SampleApplicationComponent.h  SampleApplicationReturnCodes.h  SampleEqualizerModeController.h  SmartScreenCaptionPresenter.h  SmartScreenCaptionStateManager.h  TelemetrySink.h
modules/Alexa/SampleApp/schemas/: SmartScreenSDKConfigSchema.json
modules/Alexa/SampleApp/src/: AplClientBridge.cpp  AplCoreConnectionManager.cpp  AplCoreEngineSDKLogBridge.cpp  AplCoreGuiContentDownloadManager.cpp  AplCoreGuiRenderer.cpp  AplCoreMetrics.cpp  AplCoreTextMeasurement.cpp  CMakeLists.txt  CachingDownloadManager.cpp  ConnectionObserver.cpp  ConsolePrinter.cpp  DownloadMonitor.cpp  ExternalCapabilitiesBuilder.cpp  FocusBridge.cpp  GUILogBridge.cpp  JsonUIManager.cpp  KeywordObserver.cpp  LocaleAssetsManager.cpp  PortAudioMicrophoneWrapper.cpp  RevokeAuthorizationObserver.cpp  SampleApplication.cpp  SampleApplicationComponent.cpp  SampleEqualizerModeController.cpp  SmartScreenCaptionPresenter.cpp  SmartScreenCaptionStateManager.cpp  TelemetrySink.cpp  main.cpp
modules/Alexa/SampleApp/src/GUI/: GUIClient.cpp  GUIManager.cpp
modules/Alexa/SampleApp/test/: CMakeLists.txt  SmartScreenCaptionPresenterTest.cpp  SmartScreenCaptionStateManagerTest.cpp
modules/Alexa/SmartScreenCapabilityAgents/: CMakeLists.txt
modules/Alexa/SmartScreenCapabilityAgents/AlexaPresentation/: CMakeLists.txt
modules/Alexa/SmartScreenCapabilityAgents/AlexaPresentation/src/: AlexaPresentation.cpp  CMakeLists.txt  TimeoutType.cpp
modules/Alexa/SmartScreenCapabilityAgents/AlexaPresentation/test/: AlexaPresentationTest.cpp  CMakeLists.txt
modules/Alexa/SmartScreenCapabilityAgents/LiveViewControllerCapabilityAgent/: CMakeLists.txt
modules/Alexa/SmartScreenCapabilityAgents/LiveViewControllerCapabilityAgent/src/: CMakeLists.txt  LiveViewControllerCapabilityAgent.cpp
modules/Alexa/SmartScreenCapabilityAgents/TemplateRuntime/: CMakeLists.txt
modules/Alexa/SmartScreenCapabilityAgents/TemplateRuntime/src/: CMakeLists.txt  (+1 more)
modules/Alexa/SmartScreenCapabilityAgents/VisualCharacteristics/: CMakeLists.txt
modules/Alexa/SmartScreenSDKInterfaces/: CMakeLists.txt
modules/Alexa/SmartScreenSDKInterfaces/test/: CMakeLists.txt  MockAttachmentManager.h  MockContextManager.h  MockDirectiveHandlerResult.h  MockExceptionEncounteredSender.h  MockFocusManager.h  MockMessageSender.h
modules/Alexa/Utils/: CMakeLists.txt
modules/Alexa/doc/: footer.html
modules/Alexa/tools/: Testing.cmake
modules/Alexa/tools/Testing/: android_test.py
(+402 files in other folders)
